[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UserInterface/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://src/Screens/EndScreen.gd" type="Script" id=5]
[ext_resource path="res://assets/music/Juhani Junkala [Retro Game Music Pack] Ending.ogg" type="AudioStream" id=6]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/5starParticle.png" type="Texture" id=8]
[ext_resource path="res://assets/HeartParticle.png" type="Texture" id=9]
[ext_resource path="res://assets/flare_01_0.png" type="Texture" id=10]
[ext_resource path="res://assets/zig_____.ttf" type="DynamicFontData" id=12]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 50, 0 )
initial_velocity = 350.0
orbit_velocity = 0.2
orbit_velocity_random = 0.0
color = Color( 0.223529, 0.0705882, 1, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 350.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.878431, 0.0980392, 0.87451, 1 )
hue_variation = 0.2
hue_variation_random = 0.48

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 128.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 293.48
initial_velocity_random = 0.18
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
hue_variation = 1.0
hue_variation_random = 1.0

[sub_resource type="Animation" id=4]
resource_name = "Pulse"
length = 2.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.0
margin_top = -129.5
margin_right = 254.0
margin_bottom = 120.5
rect_pivot_offset = Vector2( 250, 125 )
window_title = "High Score Achieved!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hs_name" type="LineEdit" parent="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -241.0
margin_top = -20.5
margin_right = 241.0
margin_bottom = 20.5
rect_pivot_offset = Vector2( 241, 20 )
max_length = 25
clear_button_enabled = true
placeholder_text = "Enter name here"
placeholder_alpha = 0.3
caret_blink = true
caret_blink_speed = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hs_dialog_text" type="Label" parent="WindowDialog"]
margin_right = 482.0
margin_bottom = 126.0
text = "You got a high score!
Please enter your name in the box below (Max 25 Characters)"
autowrap = true
clip_text = true

[node name="hs_ok_button" type="Button" parent="WindowDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -51.5
margin_top = -66.5
margin_right = 51.5
margin_bottom = -29.5
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 7 )]
margin_left = -335.0
margin_top = 117.0
margin_right = 335.0
margin_bottom = 177.0
rect_pivot_offset = Vector2( 335, 30 )
text = "Congradulations you did it!"

[node name="PerfectGame" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = -375.5
margin_right = 375.5
margin_bottom = 117.0
text = ""

[node name="Particles1" type="Particles2D" parent="PerfectGame"]
position = Vector2( 41.5, 336 )
emitting = false
amount = 25
lifetime = 2.0
process_material = SubResource( 1 )
texture = ExtResource( 8 )

[node name="Particles2" type="Particles2D" parent="PerfectGame"]
position = Vector2( 710.5, 336 )
emitting = false
amount = 25
lifetime = 2.0
process_material = SubResource( 1 )
texture = ExtResource( 8 )

[node name="Particles3" type="Particles2D" parent="PerfectGame"]
position = Vector2( 370.5, 340 )
emitting = false
amount = 250
lifetime = 4.0
explosiveness = 0.98
randomness = 1.0
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -143.5
margin_top = 177.0
margin_right = 143.5
margin_bottom = 242.0
text = "Your Final Score is: %s
You died %s times"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
autoplay = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 979, 424 )
amount = 50
lifetime = 5.0
preprocess = 2.0
process_material = SubResource( 3 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Pulse"
anims/Pulse = SubResource( 4 )

[node name="PlayButton" parent="." instance=ExtResource( 2 )]
margin_left = 33.0
margin_top = 991.0
margin_right = 233.0
margin_bottom = 1051.0
rect_pivot_offset = Vector2( 100, 30 )
text = "Play Again"
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="QuitButton" parent="." instance=ExtResource( 1 )]
margin_left = 1678.0
margin_top = 991.0
margin_right = 1878.0
margin_bottom = 1051.0
rect_pivot_offset = Vector2( 100, 30 )

[node name="ResetHighScores" type="Button" parent="."]
margin_left = 260.509
margin_top = 991.0
margin_right = 504.509
margin_bottom = 1051.0
text = "Reset High Scores"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoresLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -612.0
margin_top = -298.0
margin_right = 612.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 612, 176 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "
"
text = "
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="WindowDialog/hs_ok_button" to="." method="_on_hs_ok_button_button_up"]
[connection signal="mouse_entered" from="PlayButton" to="PlayButton" method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="PlayButton" method="_on_PlayButton_mouse_exited"]
[connection signal="mouse_entered" from="QuitButton" to="QuitButton" method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="QuitButton" to="QuitButton" method="_on_QuitButton_mouse_exited"]
[connection signal="button_up" from="ResetHighScores" to="." method="_on_ResetHighScores_button_up"]
